# aiTrailer

backgroundSegmentation/: CMakeLists.txt  backgroundSegementation.cpp  backgroundSegementation.h  main.cpp  main.h  picProcess.cpp  picProcess.h  readDir.cpp
drawAndSavePic/: CMakeLists.txt
edgeDetection/: CMakeLists.txt  main.cpp  main.h  readDir.h
getPhotos/: CMakeLists.txt  main.cpp
yolov3ObjectDetect/: CMakeLists.txt  main.cpp  main.h  objectDetect.cpp  objectDetect.h
